--- a/Klike/Interfaces/Main.storyboard
+++ b/Klike/Interfaces/Main.storyboard
@@ -23,24 +23,19 @@
             </objects>
             <point key="canvasLocation" x="1072" y="558"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="kBr-eF-YbO">
+        <!--Navigation Controller-->
+        <scene sceneID="EBm-ma-Y0Q">
             <objects>
-                <viewController id="HBN-Iy-dIg" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Sy9-kU-LdF"/>
-                        <viewControllerLayoutGuide type="bottom" id="9Ka-xk-gZv"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="M6P-V0-EXT">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" tag="2" title="" image="ic_tabbar_3" id="e66-sK-mIw"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Psz-q5-jqP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="CDl-bB-7wc" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" tag="2" title="" id="wcS-ld-oVZ"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PH5-w6-Oj3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IDR-CT-gDJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="252" y="1030"/>
+            <point key="canvasLocation" x="252" y="1008"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="C1b-Gp-VLq">
@@ -131,7 +126,7 @@
                     <connections>
                         <segue destination="lwR-Ih-TjK" kind="relationship" relationship="viewControllers" id="vmI-8i-I6M"/>
                         <segue destination="VOM-0F-dw4" kind="relationship" relationship="viewControllers" id="u2E-ET-QRf"/>
-                        <segue destination="HBN-Iy-dIg" kind="relationship" relationship="viewControllers" id="Bs4-HE-Rpf"/>
+                        <segue destination="CDl-bB-7wc" kind="relationship" relationship="viewControllers" id="Vgv-FS-4Xx"/>
                         <segue destination="iLJ-2j-cMl" kind="relationship" relationship="viewControllers" id="mAf-wc-e69"/>
                         <segue destination="USS-OX-ahW" kind="relationship" relationship="viewControllers" id="IYL-Fb-6bf"/>
                     </connections>
@@ -144,7 +139,6 @@
     <resources>
         <image name="ic_tabbar_1" width="18" height="24"/>
         <image name="ic_tabbar_2" width="25" height="24"/>
-        <image name="ic_tabbar_3" width="25" height="25"/>
         <image name="ic_tabbar_4" width="22" height="24"/>
         <image name="ic_tabbar_4_act" width="22" height="24"/>
         <image name="ic_tabbar_5" width="22" height="24"/>
