--- a/Klike/Interfaces/CreateEventHeader.xib
+++ b/Klike/Interfaces/CreateEventHeader.xib
@@ -2,24 +2,23 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KLCreateEventHeaderView">
-            <rect key="frame" x="0.0" y="0.0" width="640" height="160"/>
+            <rect key="frame" x="0.0" y="0.0" width="640" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h4U-JG-MSq" customClass="PFImageView">
-                    <rect key="frame" x="0.0" y="0.0" width="640" height="160"/>
+                    <rect key="frame" x="0.0" y="0.0" width="640" height="80"/>
                     <color key="backgroundColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H84-Tk-ZkI">
-                    <rect key="frame" x="0.0" y="0.0" width="640" height="160"/>
+                    <rect key="frame" x="0.0" y="0.0" width="640" height="80"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uqg-OO-NGq">
-                            <rect key="frame" x="228" y="63" width="185" height="75"/>
+                            <rect key="frame" x="228" y="-17" width="185" height="75"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="185" id="HrJ-9e-YC8"/>
                                 <constraint firstAttribute="height" constant="75" id="z2v-jJ-LVZ"/>
@@ -29,13 +28,13 @@
                             </state>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Event Photo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCK-1X-vn3">
-                            <rect key="frame" x="267" y="119" width="107" height="17"/>
+                            <rect key="frame" x="267" y="39" width="107" height="17"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F1W-Id-MDe">
-                            <rect key="frame" x="590" y="120" width="50" height="40"/>
+                            <rect key="frame" x="590" y="40" width="50" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="50" id="Szt-SM-KmN"/>
                                 <constraint firstAttribute="height" constant="40" id="rrX-u9-Ur6"/>
@@ -48,25 +47,13 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="Uqg-OO-NGq" firstAttribute="centerX" secondItem="CCK-1X-vn3" secondAttribute="centerX" constant="0.5" id="4JU-DH-MAI"/>
-                        <constraint firstAttribute="width" secondItem="H84-Tk-ZkI" secondAttribute="height" multiplier="4:1" id="5dC-Qy-uTY"/>
-                        <constraint firstAttribute="width" secondItem="H84-Tk-ZkI" secondAttribute="height" multiplier="80:19" id="L8q-fD-wyh"/>
                         <constraint firstAttribute="trailing" secondItem="F1W-Id-MDe" secondAttribute="trailing" id="WkK-Tq-9kz"/>
                         <constraint firstAttribute="bottom" secondItem="F1W-Id-MDe" secondAttribute="bottom" id="ZhM-Su-apK"/>
-                        <constraint firstAttribute="width" secondItem="H84-Tk-ZkI" secondAttribute="height" multiplier="16:7" id="a8Q-6K-7aB"/>
                         <constraint firstAttribute="bottom" secondItem="Uqg-OO-NGq" secondAttribute="bottom" constant="22" id="jWN-Pv-hiE"/>
-                        <constraint firstAttribute="width" secondItem="H84-Tk-ZkI" secondAttribute="height" multiplier="80:19" id="peO-Gc-nEM"/>
-                        <constraint firstAttribute="centerY" secondItem="Uqg-OO-NGq" secondAttribute="centerY" constant="-30.5" id="qvE-C4-isb"/>
+                        <constraint firstAttribute="height" constant="80" id="pcR-v1-tRU"/>
                         <constraint firstItem="Uqg-OO-NGq" firstAttribute="bottom" secondItem="CCK-1X-vn3" secondAttribute="bottom" constant="2" id="v04-y0-15R"/>
                         <constraint firstAttribute="centerX" secondItem="Uqg-OO-NGq" secondAttribute="centerX" id="wHW-Wf-etb"/>
                     </constraints>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="L8q-fD-wyh"/>
-                            <exclude reference="a8Q-6K-7aB"/>
-                            <exclude reference="peO-Gc-nEM"/>
-                            <exclude reference="qvE-C4-isb"/>
-                        </mask>
-                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -91,9 +78,10 @@
                 <outlet property="addPhotoButton" destination="Uqg-OO-NGq" id="aXa-mc-aqG"/>
                 <outlet property="addPhotoLabel" destination="CCK-1X-vn3" id="jVR-PK-jGS"/>
                 <outlet property="editPhotoButton" destination="F1W-Id-MDe" id="KCu-EZ-PhT"/>
+                <outlet property="heightConstraint" destination="pcR-v1-tRU" id="psf-Ze-wnh"/>
                 <outlet property="photoImageView" destination="h4U-JG-MSq" id="04X-4c-um4"/>
             </connections>
-            <point key="canvasLocation" x="672" y="122"/>
+            <point key="canvasLocation" x="724" y="82"/>
         </view>
     </objects>
     <resources>
