--- a/Klike/Sources/Controllers/KLPayedPricingController.xib
+++ b/Klike/Sources/Controllers/KLPayedPricingController.xib
@@ -6,7 +6,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KLPayedPricingController">
             <connections>
+                <outlet property="priceInput" destination="HHl-bY-o7v" id="QPH-UA-36u"/>
+                <outlet property="processingLabel" destination="P6L-GO-MxQ" id="9gG-uQ-WG8"/>
                 <outlet property="view" destination="wtl-ho-5sW" id="U0s-fx-SZd"/>
+                <outlet property="youGetLabel" destination="4S8-ra-GWz" id="YcL-sF-Ouo"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,6 +27,10 @@
                     <rect key="frame" x="40" y="25" width="544" height="19"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                     <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                    <connections>
+                        <action selector="priceValueChanged:" destination="-1" eventType="valueChanged" id="zts-gM-HJs"/>
+                        <outlet property="delegate" destination="-1" id="Fn3-R7-Icm"/>
+                    </connections>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kgE-Hm-oZb">
                     <rect key="frame" x="41" y="64" width="559" height="1"/>
