--- a/Klike/Sources/Controllers/KLThrowPricingController.xib
+++ b/Klike/Sources/Controllers/KLThrowPricingController.xib
@@ -6,6 +6,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KLThrowPricingController">
             <connections>
+                <outlet property="minimalAmaountInput" destination="eCi-M0-StC" id="UfO-wM-isH"/>
+                <outlet property="suggestedAmount" destination="Yfb-c8-mwe" id="bBa-Wg-4da"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
